src/test/deca/lexique/invalid/commentaire_incomplet.deca
// Description:
//    un commentaire non terminer mais correct lexicalment
//
// Resultats:
//    correct
//
// Historique:
//    cree le 01/01/2021

{
    /* je suis un test 
    println("correct")

}
